<resources>
    <string name="app_name">Cryptocurrencies</string>

    <string name="title_news">News</string>
    <string name="title_materials">Materials</string>
    <string name="title_cryptocurrencies">Crypto</string>
    <string name="title_notifications">Notify</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_calculator">ActivityCalculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="apy_key">ece567713426455486aeb1bb9c65f488</string>

</resources>