<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news"
        android:title="@string/title_news"
        />

    <item
        android:id="@+id/navigation_materials"
        android:icon="@drawable/materials"
        android:title="@string/title_materials" />

    <item
        android:id="@+id/navigation_cryptocurrencies"
        android:icon="@drawable/cryptocurrency"
        android:title="@string/title_cryptocurrencies" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites"
        android:title="@string/title_favorites" />

</menu>