<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.cryptocurrencies.ui.news.News"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />


    <fragment

        android:id="@+id/navigation_materials"
        android:name="com.example.cryptocurrencies.ui.materials.MaterialsFragment"
        android:label="@string/title_materials"
        tools:layout="@layout/fragment_materials" />

    <fragment
        android:id="@+id/navigation_cryptocurrencies"
        android:name="com.example.cryptocurrencies.ui.cryptocurrencies.Cryptocurrencies"
        android:label="@string/title_cryptocurrencies"
        tools:layout="@layout/fragment_cryptocurrencies" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cryptocurrencies.ui.notifications.Notifications"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.cryptocurrencies.ui.favorites.Favorites"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />


</navigation>